--- a/Style_Guide/styleGuide.html
+++ b/Style_Guide/styleGuide.html
@@ -315,7 +315,7 @@
             <h3>Structure</h3>
             <h4>Main Navigation</h4>
             <p>The main navigation for Footy Fans is located at the header bar. This bar features most of the pages on the mobile site and all of the pages on the desktop site. This navigation uses flexboxes with three items containers aligned in a single column, like so:</p>
-            <img src="images/main-nav-grid.png" alt="header-nav-image"/>
+            <img src="images/main-nav-grid2.png" alt="header-nav-image"/>
             <h5>HTML code</h5>
             <p>In order to achieve this effect, first we must define a flexbox container and the three item containers that will house the content. While the search bar is not part of the navigation, it is part of the header bar, therefore we must create a container that will house the search bar.</p>
             <pre><code>
@@ -385,11 +385,10 @@
 
 
             <h4>Website Grid Structure</h4>
-            <p>At Footy Fans, the website uses three main kinds of grid structure. For the mobile version, we use a single column grid, as a grid with multiple columns will not fit on a mobile screen. On the desktop version, we use both a single column grid, as well as double column grid. In a single column grid, there will be pages that use a more complex single column grid where items in the column use nested columns within themselves. The images below show our grid structure for all three of these types: </p>
+            <p>At Footy Fans, the website uses three main kinds of grid structure. For the mobile version, we use a single column grid, as a grid with multiple columns will not fit on a mobile screen. On the desktop version, we use both a single column grid, as well as double column grid. The images below show our grid structure for all three of these types: </p>
             <div id="box-grid-structure-example">
               <img src="images/mobile-single-column.png" alt="mobile-single-column" class="grid-structure-image-vertical"/>
               <img src="images/desktop-single-column.png" alt="desktop-single-column" class="grid-structure-image"/>
-              <img src="images/desktop-single-column-complex.png" alt="desktop-single-column-complex" class="grid-structure-image"/>
               <img src="images/desktop-double-column.png" alt="desktop-double-column" class="grid-structure-image"/>
             </div>
 
@@ -509,17 +508,38 @@
           <section id="design">
             <h3>Design</h3>
             <h4>Footy Fans Color Swatches</h4>
-            <img src="images/color5.png" alt="color-5-gunmetal-grey">
-            <p>For the header, we use a grey color. As the other elements of the website is colorful, it is important to highlight those important aspects, allowing the user to focus on those instead.</p>
+            
+            <!-- <img src="images/color5.png" alt="color-5-gunmetal-grey"> -->
+<!--             <p>For the header, we use a dark blue color. As the other elements of the website is colorful, it is important to highlight those important aspects, allowing the user to focus on those instead.</p> -->
 
-            <img src="images/color1.png" alt="color-1-blue">
+            <div class="color-box color-box-darkblue">
+              <p>Primary</p>
+              <p>#253341</p>
+              <p>rgb(37, 51, 65)</p>
+            </div>
+            <!-- <img src="images/color1.png" alt="color-1-blue"> -->
             <p>A dark blue color is used as the primary theme for Footy Fans. Not only does the dark blue color represent a professional theme, it is also similar to the main color of the Champion's League, a highly contested and important football competition to many players and fans alike. As the color is professional and important to football fans, we use this color to reflect our professionalism and dedication to football.</p>
-            <img src="images/color2.png" alt="color-1-purple">
-            <p>A lighter purple is used as the secondary theme for Footy Fans. This color compliments the darker blue color with its lighter tones and its calming nature so that the page is not too plain.</p>
-            <img src="images/color4.png" alt="color-1-red">
-            <p>For our tertiary color, we use a red color. This color is tertiary as it is not used as often as the primary and secondary colors. As red represents a high level of importance, it is imperative that we do not use it often. As a result, this red color is used only for important areas, such as the profile and cart button. </p>
-            <img src="images/color3.png" alt="color-1-tan">
-            <p>Lastly, we use a tan/light grey color for our background. Absolute colors such as white can be irritating to a user's eyes, especially when the website is viewed in low light situations. Instead, we use this tan/light grey color as an alternative as it is more comfortable to look at. </p>
+
+
+
+            <!-- <img src="images/color2.png" alt="color-1-purple"> -->
+<!--             <p>A lighter purple is used as the secondary theme for Footy Fans. This color compliments the darker blue color with its lighter tones and its calming nature so that the page is not too plain.</p> -->
+
+            <div class="color-box color-box-darkred">
+              <p>Secondary</p>
+              <p>#952424</p>
+              <p>rgb(149, 36, 36)</p>
+            </div>
+            <!-- <img src="images/color4.png" alt="color-1-red"> -->
+            <p>For our tertiary color, we use a red color. This color is tertiary as it is not used as often as the primary colors. As red represents a high level of importance, it is imperative that we do not use it often. As a result, this red color is used only for important areas, such as the profile and cart button. </p>
+
+            <div class="color-box color-box-bluegrey">
+              <p>Background</p>
+              <p>#D2D5D5</p>
+              <p>rgb(210, 213, 213)</p>
+            </div>
+            <!-- <img src="images/color3.png" alt="color-1-tan"> -->
+            <p>Lastly, we use a grey/light blue color for our background. Absolute colors such as white can be irritating to a user's eyes, especially when the website is viewed in low light situations. Instead, we use this grey/light blue color as an alternative as it is more comfortable to look at. </p>
           </section>
           <section class="return-to-top">
             <h2 class="return-top-heading">This satisfies the warning when validating</h2>
