add purple to style guide, add citation page

--- a/Style_Guide/styleGuide.html
+++ b/Style_Guide/styleGuide.html
@@ -520,18 +520,21 @@
             <!-- <img src="images/color1.png" alt="color-1-blue"> -->
             <p>A dark blue color is used as the primary theme for Footy Fans. Not only does the dark blue color represent a professional theme, it is also similar to the main color of the Champion's League, a highly contested and important football competition to many players and fans alike. As the color is professional and important to football fans, we use this color to reflect our professionalism and dedication to football.</p>
 
-
-
-            <!-- <img src="images/color2.png" alt="color-1-purple"> -->
-<!--             <p>A lighter purple is used as the secondary theme for Footy Fans. This color compliments the darker blue color with its lighter tones and its calming nature so that the page is not too plain.</p> -->
-
             <div class="color-box color-box-darkred">
               <p>Secondary</p>
               <p>#952424</p>
               <p>rgb(149, 36, 36)</p>
             </div>
             <!-- <img src="images/color4.png" alt="color-1-red"> -->
-            <p>For our tertiary color, we use a red color. This color is tertiary as it is not used as often as the primary colors. As red represents a high level of importance, it is imperative that we do not use it often. As a result, this red color is used only for important areas, such as the profile and cart button. </p>
+            <p>For our secondary color, we use a red color. This color is tertiary as it is not used as often as the primary colors. As red represents a high level of importance, it is imperative that we do not use it often. As a result, this red color is used only for important areas, such as the profile and cart button. </p>
+
+                        <!-- <img src="images/color2.png" alt="color-1-purple"> -->
+            <div class="color-box color-box-purple">
+              <p>Tertiary</p>
+              <p>#541D81</p>
+              <p>rgb(84, 29, 129)</p>
+            </div>
+            <p>A lighter purple is used as the tertiary color for Footy Fans. This color compliments the darker blue color with its lighter tones and its calming nature so that the page is not too plain.</p>
 
             <div class="color-box color-box-bluegrey">
               <p>Background</p>
