--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
     <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
       <a href="Style_Guide/styleGuide.html">Style Guide</a>
-      <a href="">Citations</a>
+      <a href="citations.html">Citations</a>
     </nav>
   </footer>
 
