--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
             <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
             <nav class="nav-row-1">
               <div class="nav-main-item">
-                <a href="profile.html"><img src="img/profile_icon.png"></a>
-                <a href="cart.html"><img src="img/cart_icon.png"></a>
+                <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
+                <a href="cart.html"><img src="img/cart_icon.png" alt="cart-icon"></a>
               </div>
 
             </nav>
@@ -36,7 +36,7 @@
           <!-- search bar -->
           <div class="header-row-2">
             <input type="text" placeholder="Search here...">
-            <img onclick="pointTo('catalog.html')" src="img/search-icon.png"/>
+            <img onclick="pointTo('catalog.html')" src="img/search-icon.png" alt="search-icon"/>
 
           </div>
 
@@ -48,6 +48,7 @@
               <a href="about.html" class="nav-main-item">About</a>
             </nav>
           </div>
+        </div>
 
     </header>
 
@@ -94,7 +95,7 @@
 
     <!-- end of main content -->
 	</div>
-  
+
   <footer>
     <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
