--- a/news.html
+++ b/news.html
@@ -22,8 +22,8 @@
             <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
             <nav class="nav-row-1">
               <div class="nav-main-item">
-                <a href="profile.html"><img src="img/profile_icon.png"></a>
-                <a href="cart.html"><img src="img/cart_icon.png"></a>
+                <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
+                <a href="cart.html"><img src="img/cart_icon.png" alt="cart-icon"></a>
               </div>
 
             </nav>
@@ -33,7 +33,7 @@
           <!-- search bar -->
           <div class="header-row-2">
             <input type="text" placeholder="Search here...">
-            <img onclick="pointTo('catalog.html')" src="img/search-icon.png"/>
+            <img onclick="pointTo('catalog.html')" src="img/search-icon.png" alt="search-icon"/>
 
           </div>
 
@@ -45,6 +45,7 @@
               <a href="about.html" class="nav-main-item">About</a>
             </nav>
           </div>
+        </div>
 
     </header>
 	<!-- content -->
