validator error fixing

--- a/cart.html
+++ b/cart.html
@@ -59,29 +59,29 @@
 
         <div class="cart-card-left cart-box">
           <div class="cart-item">
-            <img src="img/item_1_0.png"/>
+            <img src="img/item_1_0.png" alt="Manchester United 2019/20 Home Kit"/>
               <p>Manchester United 2019/2020 Home Kit</p>
               <p class="price">$109.99</p>
               <input type="number" name="quantity" min="1" max="99" value="1">
               <button>Update</button>
           </div>
           <div class="cart-item">
-            <img src="img/item_2_0.png"/>
+            <img src="img/item_2_0.png" alt="Tottenham Hotspurs 2018/19 Third Kit"/>
               <p>Tottenham Hotspurs 2018/2019 Third Kit</p>
               <p class="price">$109.99</p>
               <input type="number" name="quantity" min="1" max="99" value="1">
               <button>Update</button>
           </div>
           <div class="cart-item">
-            <img src="img/item_5.png"/>
+            <img src="img/item_5.png" alt="Manchester United 2018/19 Third Kit"/>
               <p>Manchester United 2018/2019 Third Kit</p>
               <p class="price">$109.99</p>
               <input type="number" name="quantity" min="1" max="99" value="1">
               <button>Update</button>
           </div>
           <div class="cart-item">
-            <img src="img/item_8.png"/>
-              <p>Manchester United 1998/1999 Home Kit</p>
+            <img src="img/item_8.png" alt="Manchester United 1998/20 Home Kit"/>
+              <p>Manchester United 1998/2000 Home Kit</p>
               <p class="price">$159.99</p>
               <input type="number" name="quantity" min="1" max="99" value="1">
               <button>Update</button>
@@ -104,7 +104,7 @@
 
             </div>
             <div class="checkout-section">
-              <a href="shipping.html"><button type="button">Checkout</button></a>
+              <button type="button" onclick="pointTo('shipping.html')">Checkout</button>
             </div>
 
           </div>
