--- a/citations.html
+++ b/citations.html
@@ -13,10 +13,15 @@
   <body>
     <div class="citations">
       <h1>Citation Page</h1>
+      <p>Adams, Vernon. (2013, March). Anton. Retrieved from <a href="https://fonts.google.com/specimen/Anton">https://fonts.google.com/specimen/Anton</a></p>
+      <p>Robertson, Christian. (2011, October). Roboto. Retrieved from <a href="https://fonts.google.com/specimen/Roboto">https://fonts.google.com/specimen/Roboto</a></p>
+      <p>Matteson, Steve. (2010, December). Open Sans. Retrieved from <a href="https://fonts.google.com/specimen/Open+Sans">https://fonts.google.com/specimen/Open+Sans</a></p>
+      <h2>Images used:</h2>
+      <p>Epic Games. (2018, June) Footballer Silhouette. Adapted from <a href="https://i.redd.it/sjhzdnvn87h21.jpg">https://i.redd.it/sjhzdnvn87h21.jpg</a></p>
       <h3>Code retrived from:</h3>
-      <p>w3schools(n.d.). tryhtml_form_checkbox. Retrieved from 
+      <p>w3schools(n.d.). tryhtml_form_checkbox. Adapted from
       https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_form_checkbox</p>
-      <p>w3schools(n.d.). HTML Forms. Retrieved from https://www.w3schools.com/html/html_forms.asp</p>
+      <p>w3schools(n.d.). HTML Forms. Adapted from https://www.w3schools.com/html/html_forms.asp</p>
 
       <h3>Fake address retrived from:</h3>
       <p>fakepersongenerator.com (n.d.). Random Address Generator. Retrieved from https://www.fakepersongenerator.com/Random/generate_address</p>
@@ -36,11 +41,9 @@
       <p>item_6. Retrieved from https://images.nike.com/is/image/DotCom/PHN_PS/919009_496_A/2018-19-chelsea-fc-stadium-home-football-shirt.png?fmt=png-alpha</p>
       <p>item_7. Retrieved from https://premierleague-static-files.s3.amazonaws.com/premierleague/photo/2018/07/06/91e3eb21-21a5-44d5-a8ac-ffb85c381628/everton-hk-1819-516x680-1-.png</p>
       <p>item_8. Retrieved from https://premierleague-static-files.s3.amazonaws.com/premierleague/photo/2018/01/31/2b1428b9-6f23-4c46-9c22-7b5cc4b561dd/rdJbYhFe.png</p>
-      <p>accessories. Retrieved from https://static1.fanobject.com/stores/manutd/artwork/english/banners/top_nav/top_nav_new_era.</p>
-      <p>equipment. Retrieved from https://static1.fanobject.com/stores/manutd/artwork/english/banners/top_nav/top_nav_equipment.jpg</p>
-      <p>football. Retrieved from https://static2.fanobject.com/stores/mancity/artwork/english/banners/elitebootroom/nav_dropdown.jpg</p>
       <p>americanexpress logo. Retrieved from  https://about.americanexpress.com/sites/americanexpress.newshq.businesswire.com/files/logo/image/AXP_BlueBoxLogo_EXTRALARGEscale_RGB_DIGITAL_1600x1600.png</p>
       <p>eye-icon: https://www.freeiconspng.com/uploads/eye-icon-png-eye-icon-6.png</p>
+      <p>Ole Gunnar Solskjær. Retrieved from https://www.irishtimes.com/polopoly_fs/1.3756733.1547423778!/image/image.jpg_gen/derivatives/box_620_330/image.jpg</p>
     </div>
   </body>
 </html>
