--- a/news.html
+++ b/news.html
@@ -78,6 +78,7 @@
 
       <p></p>
     </div>
+  </div>
     <footer>
       <nav>
         <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
