--- a/orderList.html
+++ b/orderList.html
@@ -60,22 +60,22 @@
 
           <div class="cart-card-left cart-box">
             <div class="cart-item">
-              <img src="img/item_1_0.png"/>
+              <img src="img/item_1_0.png" alt="Manchester United 2019/20 Home Kit"/>
                 <p>Manchester United 2019/2020 Home Kit</p>
                 <p class="price">$109.99</p>
             </div>
             <div class="cart-item">
-              <img src="img/item_2_0.png"/>
+              <img src="img/item_2_0.png" alt="Tottenham Hotspurs 2019/19 Third Kit"/>
                 <p>Tottenham Hotspurs 2018/2019 Third Kit</p>
                 <p class="price">$109.99</p>
             </div>
             <div class="cart-item">
-              <img src="img/item_5.png"/>
+              <img src="img/item_5.png" alt="Manchester United 2018/19 Home Kit"/>
                 <p>Manchester United 2018/2019 Third Kit</p>
                 <p class="price">$109.99</p>
             </div>
             <div class="cart-item">
-              <img src="img/item_8.png"/>
+              <img src="img/item_8.png" alt="Manchester United 1999/2000 Home Kit"/>
                 <p>Manchester United 1998/1999 Home Kit</p>
                 <p class="price">$159.99</p>
             </div>
@@ -85,6 +85,7 @@
             <a href="index.html" class="button">Return home</a>
           </div>
       </div>
+    </div>
 	</div>
   <footer>
     <nav>
