--- a/profile.html
+++ b/profile.html
@@ -82,20 +82,20 @@
             <fieldset>
               <legend>Current Password: </legend>
               <input type="password" id="curr-pass">
-              <img src="img/eye-icon.png" onclick="eye(1)"/>
+              <img src="img/eye-icon.png" onclick="eye(1)" alt="show/hide curr-password"/>
             </fieldset>
           </li>
           <li>
             <fieldset>
               <legend>New Password: </legend>
-              <input type="password"id="new-pass" >
-              <img src="img/eye-icon.png"onclick="eye(2)"/>
+              <input type="password" id="new-pass" >
+              <img src="img/eye-icon.png" onclick="eye(2)" alt="show/hide new-password"/>
             </fieldset>
           </li><li>
             <fieldset>
               <legend>Retype Password: </legend>
-              <input type="password"id="retype-pass">
-              <img src="img/eye-icon.png"onclick="eye(3)"/>
+              <input type="password" id="retype-pass">
+              <img src="img/eye-icon.png" onclick="eye(3)" alt="show/hide retype-password"/>
             </fieldset>
           </li>
 
