--- a/shipping.html
+++ b/shipping.html
@@ -59,23 +59,26 @@
 
       <form action="payment.html" method="POST">
         <ul>
-        <li><label for="firstname"> First name: </label>
-        <input type="text" name="firstname" placeholder="First Name"></li>
-        <li>⠀</li>
-        <li><label for="lastname">Last name:</label>
-        <input type="text" name="lastname" placeholder="Last Name"></li>
+          <li><label for="firstname"> First name: </label>
+          <input type="text" name="firstname" placeholder="First Name" id="firstname"></li>
+          <li>⠀</li>
+          <li><label for="lastname">Last name:</label>
+          <input type="text" name="lastname" placeholder="Last Name" id="lastname"></li>
+        </ul>
         <h4>Enter a new address: </h4>
-        <li><label>Shipping address:</label>
-        <li><input type="text" name="street" placeholder="Address" size="20"></li>
-        <li>⠀</li>
-        <li><input type="text" name="city" placeholder="City">
-        <input type="text" name="province" placeholder="Province"></li>
-        <li>⠀</li>
-        <li><input type="text" name="postal" placeholder="Zip Code">
-        <input type="text" name="country" placeholder="Country">
-        </li>
-      </ul>
-        <input type="submit" value="Submit" >
+        <ul>
+
+          <li><label>Shipping address:</label>
+          <li><input type="text" name="street" placeholder="Address" size="20"></li>
+          <li>⠀</li>
+          <li><input type="text" name="city" placeholder="City">
+          <input type="text" name="province" placeholder="Province"></li>
+          <li>⠀</li>
+          <li><input type="text" name="postal" placeholder="Zip Code">
+          <input type="text" name="country" placeholder="Country">
+          </li>
+        </ul>
+          <input type="submit" value="Submit" >
       </form>
       <form action="payment.html" method="POST">
       <h4>Or pick an existing address: </h4>
@@ -104,10 +107,11 @@
           <span>M16 0RA United Kingdom</span>
         </address>
         </div>
+      </div>
       </form>
-    </div>
+
     <form action="payment.html" method="POST">
-    <input type="submit" value="Submit" >
+      <input type="submit" value="Submit" >
     </form>
 
 
