--- a/citations.html
+++ b/citations.html
@@ -22,6 +22,7 @@
       <p>w3schools(n.d.). tryhtml_form_checkbox. Adapted from
       https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_form_checkbox</p>
       <p>w3schools(n.d.). HTML Forms. Adapted from https://www.w3schools.com/html/html_forms.asp</p>
+      <p>w3schools(n.d.). JavaScript Slideshow. Adapted from: https://www.w3schools.com/howto/howto_js_slideshow.asp</p>
 
       <h3>Fake address retrived from:</h3>
       <p>fakepersongenerator.com (n.d.). Random Address Generator. Retrieved from https://www.fakepersongenerator.com/Random/generate_address</p>
