--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
       <h3 id="title">News</h3>
       <div class="card">
         <h3 class="update">Update</h3>
-        <img src="img/item_1_2.png" alt="news card image"/>
+        <img src="img/item_1_2.PNG" alt="news card image"/>
         <h4>Update 1</h4>
 
         <p>The Manchester United 2019/2020 Home Kit and the 1998/1999 Treble winning Home Kit are now available for purchase.</p>
