semantic html5 changes

--- a/about.html
+++ b/about.html
@@ -53,11 +53,11 @@
     </header>
 
 	<!-- content -->
-	<div class="main-content container about">
+	<main class="main-content container about">
 
-    <div class="about-content">
+    <article class="about-content">
 
-      <div class="about-contact">
+      <section class="about-contact">
         <!-- contact us -->
         <h4 id="contact">Contact Us</h4>
         <ul>
@@ -65,36 +65,38 @@
           <li>Phone1: (626)243-7837</li>
 
         </ul>
-      </div>
+      </section>
       <!-- store addresses -->
-      <div class="about-addresses">
-        <h4 id="addresses">Store Addresses</h4>
-          <ol>
-            <li>Address 1</li>
-            <li>Address 2</li>
-            <li>Address 3</li>
-          </ol>
-      </div>
+      <section class="about-addresses">
+        <h4 id="addresses">Store Address: </h4>
+        <address>
+          <span>303 Browning Lane</span>
+          <span>Horseheads New York NY</span>
+          <span>14845</span>
+        </address>
+      </section>
 
       <!-- FAQ -->
-      <div class="about-faq">
+      <section class="about-faq">
 
           <h4 id="faq">FAQ</h4>
-
-          <p class="question">What if the item I purchased is in back-order?</p>
-          <p class="answer">Don't worry, we have your order in our list! When we are ready to ship your order, we will only charge you then and ship as soon as possible.</p>
-
-          <p class="question">What if the item I want to purchase is out of stock?</p>
-          <p class="answer">If the item you want is still being produced, stay patient. We will stock items within 2 weeks of it going out of stock. If you wish, you can subscribe to our mailing list and get a notification when our items have been restocked.</p>
-
-          <p class="question">I purchased the wrong item, how do I return it?</p>
-          <p class="answer">Let us know via e-mail about your item and we will send you a paid shipping label. Once you receive the shipping label, just repackage your order and ship it back to us. We will refund you within 2 business days of us receving the package.</p>
-
+          <details>
+            <summary>What if the item I purchased is in back-order?</summary>
+            <p class="answer">Don't worry, we have your order in our list! When we are ready to ship your order, we will only charge you then and ship as soon as possible.</p>
+          </details>
+          <details>
+            <summary>What if the item I want to purchase is out of stock?</summary>
+            <p class="answer">If the item you want is still being produced, stay patient. We will stock items within 2 weeks of it going out of stock. If you wish, you can subscribe to our mailing list and get a notification when our items have been restocked.</p>
+          </details>
+          <details>
+            <summary>I purchased the wrong item, how do I return it?</summary>
+            <p class="answer">Let us know via e-mail about your item and we will send you a paid shipping label. Once you receive the shipping label, just repackage your order and ship it back to us. We will refund you within 2 business days of us receving the package.</p>
+          </details>
         </div>
-    </div>
+    </section>
 
     <!-- end of main content -->
-	</div>
+	</main>
 
   <footer>
     <nav>
