--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
 
     </header>
 	<!-- content -->
-	<div class="main-content container">
+	<main class="main-content container">
 		<!-- search and filter -->
     <div class="content-item catalog-filter">
       <div class="sort-style">
@@ -97,7 +97,7 @@
       <p class="price">$159.99</p><noscript><a href="detailedProductMU.html" class="noscript-a">More info</a></noscript></div>
     </div>
 
-	</div>
+	</main>
   <footer>
     <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
