--- a/confirmation.html
+++ b/confirmation.html
@@ -51,12 +51,12 @@
     </header>
 
 	<!-- content -->
-	<div class="main-content container confirmation-container">
+	<main class="main-content container confirmation-container">
     <div class="confirmation-box">
       <h3>Thank you for your purchase!</h3>
       <a href="orderList.html" class="button">view order list</a>
     </div>
-	</div>
+	</main>
   <footer>
     <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
