--- a/detailedProductMU.html
+++ b/detailedProductMU.html
@@ -55,7 +55,7 @@
 	<!-- content -->
 	<div class="main-content container product">
 		<!-- detailed product -->
-      <div class="product-left">
+      <section class="product-left">
 
         <div class="product-img">
           <div class="image-file image-1">
@@ -70,15 +70,15 @@
           </div>
         </div>
 
-        <div class="product-info">
+        <article class="product-info">
           <h3>Manchester United 2019/2020 Home Kit</h3>
           <p class="price">$109.99</p>
           <p>The New Manchester United 2019/2020 Home Kit. A black adidas logo is located on the right side and a homage to the Treble winning 1998-1999 season crest is located on the right. The two sleeves feature the time of the two clutch goals scored against Barcelona in the Champion's League Final in 1999, 90'+1 and 90'+3. Located on the lower left is a message that mentions the fact that Manchester United obtained the Treble in 1999. Lastly, on the inside, the winning finals dates are featured.</p>
-        </div>
+        </article>
 
 
 
-        <div class="product-review"><h3>Product Reviews</h3>
+        <section class="product-review"><h3>Product Reviews</h3>
           <div class="review-item">
             <div class="review-top-info">
               <p class="review-username">Ronaldinho1980</p>
@@ -115,11 +115,11 @@
           </div>
 
 
-        </div>
+        </section>
         <!-- end left -->
-     </div>
+     </section>
 
-      <div class="product-right">
+      <section class="product-right">
         <p>Size:</p>
         <select>
           <option value="extra-small">XS</option>
@@ -133,7 +133,7 @@
         <div class="add-to-cart-button">
           <button type="button" onclick="pointTo('cart.html')">Add to Cart</button>
         </div>
-      </div>
+      </section>
 
 
 
