--- a/detailedProductTH.html
+++ b/detailedProductTH.html
@@ -53,11 +53,11 @@
 
     </header>
 	<!-- content -->
-	<div class="main-content container product">
+	<main class="main-content container product">
 		<!-- detailed product -->
-      <div class="product-left">
+      <section class="product-left">
 
-        <div class="product-img">
+        <figure class="product-img">
           <div class="image-file image-1">
             <img class="image-preview" src="img/item_2_0.png" alt="image 2">
           </div>
@@ -68,17 +68,17 @@
             <span class="image-dot dot-2" onClick="showImageTH(2)"></span>
             <span class="image-dot dot-3" onClick="showImageTH(3)"></span>
           </div>
-        </div>
+        </figure>
 
-        <div class="product-info">
+        <article class="product-info">
           <h3>Tottenham Hotspurs 2018/2019 Home Kit</h3>
           <p class="price">$109.99</p>
           <p>The Tottenham Hotspurs Third Kit was featured in their semi-final winning match in the Champion's League against Ajax on May 8th, 2019. This kit features the Nike logo on the right as well as the Hotspur's logo on the left. The Third kit is designed to look like a dark blue jersey with teal paint splattered throughout the shirt. This unique design differentiates the Hotspurs from other team jerseys.</p>
-        </div>
+        </article>
 
 
 
-        <div class="product-review"><h3>Product Reviews</h3>
+        <section class="product-review"><h3>Product Reviews</h3>
           <div class="review-item">
             <div class="review-top-info">
               <p class="review-username">Ronaldinho1980</p>
@@ -115,11 +115,11 @@
           </div>
 
 
-        </div>
+        </section>
         <!-- end left -->
-     </div>
+     </section>
 
-      <div class="product-right">
+      <section class="product-right">
         <p>Size:</p>
         <select>
           <option value="extra-small">XS</option>
@@ -133,11 +133,11 @@
         <div class="add-to-cart-button">
           <button type="button" onclick="pointTo('cart.html')">Add to Cart</button>
         </div>
-      </div>
+      </section>
 
 
 
-	</div>
+	</main>
   <footer>
     <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
