--- a/index.html
+++ b/index.html
@@ -52,35 +52,10 @@
     </header>
 
 	<!-- content -->
-	<div class="main-content container container-home">
-
-		<!-- category -->
-    <!-- <h3 id="title">New Arrivals</h3>
-		<div class="content-item section-catalog">
-      <div class="new-arrival-item">
-        <img src="img/item_1_0.png" alt="Manchester United 2019/20 Home Jersey">
-        <div class="new-arrival-p"><p>Manchester United 2019/20 Home Jersey</p></div>
-
-
-
-      </div>
-        <div class="new-arrival-item">
-          <img src="img/item_2_0.png" alt="Tottenham Hotspur 2018/19 Third Jersey">
-          <div class="new-arrival-p"><p>Tottenham Hotspur 2018/19 Third Jersey</p></div>
-
-
-      </div>
-      <div class="new-arrival-item">
-        <img src="img/item_3.png" alt="Manchester City 2018/19 Home Jersey">
-        <div class="new-arrival-p"><p>Manchester City 2018/19 Home Jersey</p></div>
-
-
-      </div>
-		</div> -->
-
+	<main class="main-content container container-home">
 		<!-- club -->
     <h3>Shop By Club</h3>
-		<div class="content-item section-club">
+		<section class="content-item section-club">
       <!-- images taken from https://www.premierleague.com/clubs -->
       <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/arsenal.svg" alt="football_club"/><p>Arsenal</p></a></div>
       <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/aston_villa.svg" alt="football_club"/><p>Aston Villa</p></a></div>
@@ -102,8 +77,8 @@
       <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/watford.svg" alt="football_club"/><p>Watford</p></a></div>
       <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/west_ham.svg" alt="football_club"/><p>West Ham United</p></a></div>
       <div class="club" onclick="pointTo(catalog.html)"><a href="catalog.html"><img src="img/BPL/wolves.svg" alt="football_club"/><p>Wolves</p></a></div>
-		</div>
-	</div>
+		</section>
+	</main>
 
   <footer>
     <nav>
