--- a/payment.html
+++ b/payment.html
@@ -53,8 +53,8 @@
 
     </header>
 	<!-- content -->
-	<div class="main-content container">
-    <div class="shipping payment-box">
+	<main class="main-content container">
+    <section class="shipping payment-box">
       <h3>Payment Info</h3>
       <!-- POST removes the form data from the url. -->
       <form action="confirmation.html" class="payment-form" method="POST">
@@ -82,8 +82,8 @@
         <input type="submit" value="Submit">
       </div>
       </form>
-    </div>
-	</div>
+    </section>
+	</main>
 
   <footer>
     <nav>
