--- a/shipping.html
+++ b/shipping.html
@@ -53,7 +53,7 @@
     </header>
 
 	<!-- content -->
-	<div class="main-content container">
+	<main class="main-content container">
     <div class="shipping shipping-box">
       <h3>Shipping Info</h3>
 
@@ -116,7 +116,7 @@
 
 
     </div>
-	</div>
+	</main>
 
   <footer>
     <nav>
