--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
     </header>
 
 	<!-- content -->
-	<div class="main-content container cart-container">
+	<main class="main-content container cart-container">
     <h3 id="title">Shopping Cart</h3>
 
 		<!-- shopping cart list -->
@@ -111,7 +111,7 @@
         </div>
       </div>
 
-	</div>
+	</main>
   <footer>
     <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
