--- a/news.html
+++ b/news.html
@@ -49,7 +49,7 @@
 
     </header>
 	<!-- content -->
-	<div class="main-content container">
+	<main class="main-content container">
 		<!-- updates -->
     <div class="content-item news-updates">
       <h3 id="title">News</h3>
@@ -78,7 +78,7 @@
 
       <p></p>
     </div>
-  </div>
+  </main>
     <footer>
       <nav>
         <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
