--- a/orderList.html
+++ b/orderList.html
@@ -51,7 +51,7 @@
 
     </header>
 	<!-- content -->
-	<div class="main-content container">
+	<main class="main-content container">
     <div class="main-content container order-list-container">
       <h3 id="title">Your Order List</h3>
 
@@ -86,7 +86,7 @@
           </div>
       </div>
     </div>
-	</div>
+	</main>
   <footer>
     <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
