--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 	<main class="main-content container about">
 
     <article class="about-content">
-
+      
       <section class="about-contact">
         <!-- contact us -->
         <h4 id="contact">Contact Us</h4>
@@ -92,8 +92,8 @@
             <summary>I purchased the wrong item, how do I return it?</summary>
             <p class="answer">Let us know via e-mail about your item and we will send you a paid shipping label. Once you receive the shipping label, just repackage your order and ship it back to us. We will refund you within 2 business days of us receving the package.</p>
           </details>
-        </div>
-    </section>
+        </section>
+    </article>
 
     <!-- end of main content -->
 	</main>
