--- a/detailedProductTH.html
+++ b/detailedProductTH.html
@@ -24,6 +24,12 @@
 
           <div class="header-row-1">
             <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
+            <div class="header-row-2">
+              <input type="text" placeholder="Search here...">
+              <img onclick="pointTo('catalog.html')" src="img/search-icon.png" alt="search-icon"/>
+
+            </div>
+
             <nav class="nav-row-1">
               <div class="nav-main-item">
                 <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
@@ -35,11 +41,7 @@
 
 
           <!-- search bar -->
-          <div class="header-row-2">
-            <input type="text" placeholder="Search here...">
-            <img onclick="pointTo('catalog.html')" src="img/search-icon.png" alt="search-icon"/>
 
-          </div>
 
           <div class="header-row-3">
             <nav class="nav-row-3">
@@ -78,7 +80,7 @@
 
 
 
-        <section class="product-review"><h3>Product Reviews</h3>
+        <fieldset class="product-review"><legend>Product Reviews</legend>
           <div class="review-item">
             <div class="review-top-info">
               <p class="review-username">Ronaldinho1980</p>
