--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 
           <div class="header-row-1">
             <img class="nav-main-logo-img" src="img/logoSmall.png" alt="Logo" onclick="pointTo('index.html')"/>
+            <div class="header-row-2">
+              <input type="text" placeholder="Search here...">
+              <img onclick="pointTo('catalog.html')" src="img/search-icon.png" alt="search-icon"/>
+
+            </div>
+
             <nav class="nav-row-1">
               <div class="nav-main-item">
                 <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
@@ -33,11 +39,7 @@
 
 
           <!-- search bar -->
-          <div class="header-row-2">
-            <input type="text" placeholder="Search here...">
-            <img onclick="pointTo('catalog.html')" src="img/search-icon.png" alt="search-icon"/>
 
-          </div>
 
           <div class="header-row-3">
             <nav class="nav-row-3">
@@ -50,9 +52,9 @@
         </div>
 
     </header>
-
 	<!-- content -->
 	<main class="main-content container container-home">
+    <img src="img/banner.png">
 		<!-- club -->
     <h3>Shop By Club</h3>
 		<section class="content-item section-club">
