--- a/about.html
+++ b/about.html
@@ -31,8 +31,10 @@
 
             <nav class="nav-row-1">
               <div class="nav-main-item">
-                <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
-                <a href="cart.html"><img src="img/cart_icon.png" alt="cart-icon"></a>
+                <section class="profile-cart">
+                  <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
+                  <a href="cart.html" class="cart-nav"><img src="img/cart_icon.png" alt="cart-icon"></a>
+                </section>
               </div>
 
             </nav>
@@ -101,11 +103,9 @@
 	</main>
 
   <footer>
-    <nav>
       <a href="https://github.com/Sanada-Yukimura/IAT339-D101-P02">GitHub</a>
       <a href="Style_Guide/styleGuide.html">Style Guide</a>
       <a href="citations.html">Citations</a>
-    </nav>
   </footer>
 
 
