--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
             <nav class="nav-row-1">
               <div class="nav-main-item">
-                <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
-                <a href="cart.html"><img src="img/cart_icon.png" alt="cart-icon"></a>
+                <section class="profile-cart">
+                  <a href="profile.html"><img src="img/profile_icon.png" alt="profile-icon"></a>
+                  <a href="cart.html" class="cart-nav"><img src="img/cart_icon.png" alt="cart-icon"></a>
+                </section>
               </div>
 
             </nav>
@@ -54,7 +56,7 @@
     </header>
 	<!-- content -->
 	<main class="main-content container container-home">
-    <img src="img/banner.png">
+    <img src="img/banner.png" class="index-banner">
 		<!-- club -->
     <h3>Shop By Club</h3>
 		<section class="content-item section-club">
