--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 	<!-- content -->
 	<main class="main-content container container-home">
-    <img src="img/banner.png" class="index-banner">
+    <img src="img/banner.png" class="index-banner" alt="banner">
 		<!-- club -->
     <h3>Shop By Club</h3>
 		<section class="content-item section-club">
